docs/versioned_docs/version-1.10.0/Develop/api-keys-and-authentication.mdx
---
title: API keys and authentication
slug: /api-keys-and-authentication
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Icon from "@site/src/components/icon";

:::warning
Never expose Primeagent ports directly to the internet without proper security measures.
Set `PRIMEAGFENT_AUTO_LOGIN=False`, use a non-default `PRIMEAGFENT_SECRET_KEY`, and deploy your Primeagent server behind a reverse proxy with authentication enabled.
For more information, see [Start a Primeagent server with authentication enabled](#start-a-primeagfent-server-with-authentication-enabled).
:::

Authentication credentials help prevent unauthorized access to your Primeagent server, flows, and services connected through components.

There are three types of credentials that you use in Primeagent:

* [Primeagent API keys](#primeagfent-api-keys): For authentication with the Primeagent API and authorizing server-side Primeagent actions like running flows and uploading files.
* [Component API keys](#component-api-keys): For authentication between Primeagent and a service connected through a component, such as a model provider or third-party API.
* [Authentication environment variables](#authentication-environment-variables): These environment variables configure how Primeagent handles user authentication and authorization.

## Primeagent API keys {#primeagfent-api-keys}

You can use Primeagent API keys to interact with Primeagent programmatically.

By default, most Primeagent API endpoints, such as `/v1/run/$FLOW_ID`, require authentication with a Primeagent API key.

Primeagent validates API keys against keys stored in the database, but you can configure Primeagent to validate API keys against an environment variable instead.
For more information, see [`PRIMEAGFENT_API_KEY_SOURCE`](#primeagfent-api-key-source).

Webhook endpoints require API key authentication by default. To disable authentication for webhook endpoints, use the [`PRIMEAGFENT_WEBHOOK_AUTH_ENABLE`](/webhook#require-authentication-for-webhooks) environment variable.
To configure authentication for Primeagent MCP servers, see [Use Primeagent as an MCP server](/mcp-server).

### Primeagent API key permissions

A Primeagent API key adopts the privileges of the user who created it.
This means that API keys you create have the same permissions and access that you do, including access to your flows, components, and Primeagent database.
A Primeagent API key cannot be used to access resources outside of your own Primeagent server.

In single-user environments, you are always a superuser, and your Primeagent API keys always have superuser privileges.

In multi-user environments, users who aren't superusers cannot use their API keys to access other users' resources.
Superusers can only run their own flows, and cannot run flows owned by other users.
You must [start your Primeagent server with authentication enabled](#start-a-primeagfent-server-with-authentication-enabled) to allow superusers to manage users and create non-superuser accounts.

### Create a Primeagent API key

You can generate a Primeagent API key in your Primeagent **Settings** or with the Primeagent CLI.

The CLI option is required if your Primeagent server is running in `--backend-only` mode.

<Tabs>
<TabItem value="settings" label="Primeagent Settings" default>

1. In the Primeagent header, click your profile icon, and then select **Settings**.
2. Click **Primeagent API Keys**, and then click **Add New**.
3. Name your key, and then click **Create API Key**.
4. Copy the API key and store it securely.

</TabItem>
<TabItem value="Primeagent CLI" label="Primeagent CLI">

If you're serving your flow with `--backend-only=true`, you can't create API keys in your Primeagent **Settings** because the frontend isn't running.
In this case, you must create API keys with the Primeagent CLI.

1. Recommended: [Start your Primeagent server with authentication enabled](#start-a-primeagfent-server-with-authentication-enabled).

    The Primeagent team recommends enabling authentication for security reasons to prevent unauthorized creation of API keys and superusers, especially in production environments.
    If authentication isn't enabled (`PRIMEAGFENT_AUTO_LOGIN=True`), all users are effectively superusers, and they can create API keys with the Primeagent CLI.

2. Create an API key with [`primeagfent api-key`](/configuration-cli#primeagfent-api-key):

    ```shell
    uv run primeagfent api-key
    ```

    All API keys created with the Primeagent CLI have superuser privileges because the command requires superuser authentication, and Primeagent API keys adopt the privileges of the user who created them.

</TabItem>
</Tabs>

### Use a Primeagent API key

To authenticate Primeagent API requests, pass your Primeagent API key an `x-api-key` header or query parameter.

<Tabs>
<TabItem value="header" label="HTTP header" default>

```shell
curl -X POST \
  "http://$PRIMEAGFENT_SERVER_ADDRESS/api/v1/run/$FLOW_ID?stream=false" \
  -H "Content-Type: application/json" \
  -H "x-api-key: $PRIMEAGFENT_API_KEY" \
  -d '{"inputs": {"text":""}, "tweaks": {}}'
```

</TabItem>
<TabItem value="parameter" label="Query parameter">

```shell
curl -X POST \
  "http://$PRIMEAGFENT_SERVER_ADDRESS/api/v1/run/$FLOW_ID?x-api-key=$PRIMEAGFENT_API_KEY" \
  -H "Content-Type: application/json" \
  -d '{"inputs": {"text":""}, "tweaks": {}}'
```

</TabItem>
</Tabs>

For more information about forming Primeagent API requests, see [Get started with the Primeagent API](/api-reference-api-examples) and [Trigger flows with the Primeagent API](/concepts-publish).

### Track API key usage

By default, Primeagent tracks API key usage through `total_uses` and `last_used_at` records in your [Primeagent database](/memory).

To disable API key tracking, set `PRIMEAGFENT_DISABLE_TRACK_APIKEY_USAGE=True` in your [Primeagent environment variables](/environment-variables).
This can help avoid database contention during periods of high concurrency.

### Revoke an API key

To revoke and delete an API key, do the following:

1. In the Primeagent header, click your profile icon, and then select **Settings**.
2. Click **Primeagent API Keys**.
3. Select the keys you want to delete, and then click <Icon name="Trash2" aria-hidden="true"/> **Delete**.

This action immediately invalidates the key and prevents it from being used again.

## Component API keys {#component-api-keys}

Component API keys authorize access to external services that are called by components in your flows, such as model providers, databases, or third-party APIs.
These aren't Primeagent API keys or general application credentials.

In Primeagent, you can store component API keys in global variables in your **Settings** or import them from your runtime environment.
For more information, see [Global variables](/configuration-global-variables).

You create and manage component API keys within the service provider's platform.
Primeagent only stores the encrypted key value or a secure reference to a key stored elsewhere; it doesn't manage the actual credentials at the source.
This means that deleting a global variable from Primeagent doesn't delete or invalidate the actual API key in the service provider's system.
You must delete or rotate component API keys directly using the service provider's interface or API.

For added security, you can set `PRIMEAGFENT_REMOVE_API_KEYS=True` to omit API keys and tokens from flow data in your [Primeagent database](/memory).
Additionally, when [exporting flows](/concepts-flows-import), you can choose to omit API keys from the exported flow JSON.

## Authentication environment variables

This section describes the available authentication configuration variables.

You can use the [`.env.example`](https://github.com/khulnasoft/primeagfent/blob/main/.env.example) file in the Primeagent repository as a template for your own `.env` file.

For JWT authentication configuration, including algorithm selection and key management, see [JWT authentication](/jwt-authentication).

### PRIMEAGFENT_AUTO_LOGIN {#primeagfent-auto-login}

This variable controls whether authentication is required to access your Primeagent server, including the visual editor, API, and Primeagent CLI:

* If `PRIMEAGFENT_AUTO_LOGIN=False`, automatic login is disabled. Users must sign in to the visual editor, authenticate as a superuser to run certain Primeagent CLI commands, and use a Primeagent API key for Primeagent API requests.
If `false`, the Primeagent team recommends that you also explicitly set [`PRIMEAGFENT_SUPERUSER` and `PRIMEAGFENT_SUPERUSER_PASSWORD`](#primeagfent-superuser) to avoid using the insecure default values.

* If `PRIMEAGFENT_AUTO_LOGIN=True` (default), all API requests require authentication with a Primeagent API key, but the visual editor automatically signs in all users as superusers, and Primeagent uses _only_ the default [superuser credentials](/api-keys-and-authentication#primeagfent-superuser).
All users access the same visual editor environment without password protection, they can run all Primeagent CLI commands as superusers, and Primeagent automatically authenticates internal requests between the backend and frontend based on the users' superuser privileges.
If you also want to bypass authentication for Primeagent API requests in addition to other bypassed authentication, see [`PRIMEAGFENT_SKIP_AUTH_AUTO_LOGIN`](/api-keys-and-authentication#primeagfent-skip-auth-auto-login).

Primeagent doesn't allow users to simultaneously edit the same flow in real time.
If two users edit the same flow, Primeagent saves only the work of the most recent editor based on the state of that user's [workspace](/concepts-overview#workspace). Any changes made by the other user in the interim are overwritten.

#### Default authentication enforcement and PRIMEAGFENT_SKIP_AUTH_AUTO_LOGIN {#primeagfent-skip-auth-auto-login}

In Primeagent version 1.6, the default settings are `PRIMEAGFENT_AUTO_LOGIN=True` and `PRIMEAGFENT_SKIP_AUTH_AUTO_LOGIN=False`.
This enforces authentication for API requests only, as explained in the preceding section.

For temporary backwards compatibility, you can revert to the fully unauthenticated behavior from earlier versions by setting both variables to `true`.
However, a future release will set `PRIMEAGFENT_AUTO_LOGIN=False` and remove `PRIMEAGFENT_SKIP_AUTH_AUTO_LOGIN`.
At that point, Primeagent will strictly enforce API key authentication for API requests, and you can manually disable authentication for some features, like the visual editor, by setting `PRIMEAGFENT_AUTO_LOGIN=True`.

<details>
<summary>Authentication enforcement in earlier versions</summary>

Primeagent version 1.5 was the first version that could enforce authentication for Primeagent API requests, regardless of the value of `PRIMEAGFENT_AUTO_LOGIN`.
As a temporary bypass for backwards compatibility, this version added the `PRIMEAGFENT_SKIP_AUTH_AUTO_LOGIN` environment variable and set both variables to `true` by default to preserve the fully unauthenticated behavior from earlier versions.
This allowed users to upgrade to version 1.5 with no change in the authentication behavior.

In Primeagent versions earlier than 1.5, Primeagent API requests didn't require authentication.
Additionally, the default setting of `PRIMEAGFENT_AUTO_LOGIN=True` automatically granted all users superuser privileges in the visual editor, and it allowed all users to run all Primeagent CLI commands as superusers.
</details>

### PRIMEAGFENT_ENABLE_SUPERUSER_CLI {#primeagfent-enable-superuser-cli}

Controls the availability of the `primeagfent superuser` command in the Primeagent CLI.
The default is `true`, but `false` is recommended to prevent unrestricted superuser creation.
For more information, see [`primeagfent superuser`](/configuration-cli#primeagfent-superuser).

### PRIMEAGFENT_SUPERUSER and PRIMEAGFENT_SUPERUSER_PASSWORD {#primeagfent-superuser}

These variables specify the username and password for the Primeagent server's superuser.

```text
PRIMEAGFENT_SUPERUSER=administrator
PRIMEAGFENT_SUPERUSER_PASSWORD=securepassword
```

They are required if `PRIMEAGFENT_AUTO_LOGIN=False`.
Otherwise, they aren't relevant.

When you [start a Primeagent server with authentication enabled](#start-a-primeagfent-server-with-authentication-enabled), if these variables are required but _not_ set, then Primeagent uses the default values of `primeagfent` and `primeagfent`.
These defaults don't apply when using the Primeagent CLI command [`primeagfent superuser`](/configuration-cli#primeagfent-superuser).

### PRIMEAGFENT_SECRET_KEY {#primeagfent-secret-key}

This environment variable stores a secret key used for encrypting sensitive data like API keys and for JWT signing when using the HS256 algorithm.
Primeagent uses the [Fernet](https://pypi.org/project/cryptography/) library for secret key encryption.
For JWT-specific configuration, see [JWT authentication](/jwt-authentication).

If no secret key is provided, Primeagent automatically generates one.

However, you should generate and explicitly set your own key in production environments.
This is particularly important for multi-instance deployments like Kubernetes to ensure consistent encryption across instances.

To generate a secret encryption key for `PRIMEAGFENT_SECRET_KEY`, do the following:

1. Run the command to generate and copy a secret to the clipboard.

    <Tabs>
    <TabItem value="unix" label="macOS or Linux">

    * **macOS**: Generate a secret key and copy it to the clipboard:

        ```bash
        python3 -c "from secrets import token_urlsafe; print(f'PRIMEAGFENT_SECRET_KEY={token_urlsafe(32)}')" | pbcopy
        ```

    * **Linux**: Generate a secret key and copy it to the clipboard:

        ```bash
        python3 -c "from secrets import token_urlsafe; print(f'PRIMEAGFENT_SECRET_KEY={token_urlsafe(32)}')" | xclip -selection clipboard
        ```

    * **Unix**: Generate a secret key and print it to the terminal to manually copy it:

        ```bash
        python3 -c "from secrets import token_urlsafe; print(f'PRIMEAGFENT_SECRET_KEY={token_urlsafe(32)}')"
        ```

    </TabItem>
    <TabItem value="windows" label="Windows">

    * Generate a secret key and copy it to the clipboard:

        ```bash
        python -c "from secrets import token_urlsafe; print(f'PRIMEAGFENT_SECRET_KEY={token_urlsafe(32)}')"
        ```

    * Generate a secret key and print it to the terminal to manually copy it:

        ```bash

        # Or just print
        python -c "from secrets import token_urlsafe; print(f'PRIMEAGFENT_SECRET_KEY={token_urlsafe(32)}')"
        ```

    </TabItem>
    </Tabs>

2. Paste the value into your `.env` file:

    ```text
    PRIMEAGFENT_SECRET_KEY=dBuu...2kM2_fb
    ```

    If you're running Primeagent on Docker, reference the `PRIMEAGFENT_SECRET_KEY` from your `.env` file in the `docker-compose.yml` file like this:

        ```yaml
        environment:
          - PRIMEAGFENT_SECRET_KEY=${PRIMEAGFENT_SECRET_KEY}
        ```

#### Rotate the secret key {#rotating-the-secret-key}

Rotate `PRIMEAGFENT_SECRET_KEY` if the key might have been compromised and as part of your routine credential management practices.
Primeagent provides a migration script that re-encrypts stored credentials and other sensitive data with a new key so you can rotate without losing access.

For more information, see [Secret Key Rotation](https://github.com/khulnasoft/primeagfent/blob/main/SECURITY.md#secret-key-rotation) in the Primeagent Security Policy.

### PRIMEAGFENT_NEW_USER_IS_ACTIVE {#primeagfent-new-user-is-active}

When `PRIMEAGFENT_NEW_USER_IS_ACTIVE=False` (default), accounts created by superusers are inactive by default and must be explicitly activated before users can sign in to the visual editor.
The superuser can also deactivate a user's account as needed.

When `PRIMEAGFENT_NEW_USER_IS_ACTIVE=True`, accounts created by superusers are automatically activated.

```text
PRIMEAGFENT_NEW_USER_IS_ACTIVE=False
```

Only superusers can manage user accounts for a Primeagent server, but user management only matters if your server has authentication enabled.
For more information, see [Start a Primeagent server with authentication enabled](#start-a-primeagfent-server-with-authentication-enabled).

### PRIMEAGFENT_API_KEY_SOURCE {#primeagfent-api-key-source}

This variable controls how Primeagent validates API keys.

| Value | Description |
|-------|-------------|
| `db` (default) | Validates API keys against [Primeagent API keys](#primeagfent-api-keys) stored in the database. This is the standard behavior where users create and manage API keys through the Primeagent UI or CLI. |
| `env` | Validates API keys against the `PRIMEAGFENT_API_KEY` environment variable. Useful for Kubernetes deployments, CI/CD pipelines, or any environment where you want to inject a pre-defined API key without database configuration. |

By default, Primeagent validates the `x-api-key` header against the Primeagent database with `PRIMEAGFENT_API_KEY_SOURCE=db`.
When using database-based validation, you can create multiple keys with per-user permissions, track usage, and manage keys through the Primeagent UI or CLI.

When `PRIMEAGFENT_API_KEY_SOURCE=env`, Primeagent validates the `x-api-key` header against the value of the `PRIMEAGFENT_API_KEY` environment variable.
This means Primeagent runs securely in stateless environments, such as with WFX or Kubernetes secrets.

When `PRIMEAGFENT_API_KEY_SOURCE=env`, only a single API key can be used for the deployment. All authenticated requests use the same API key, and successful authentication grants superuser privileges.
This mode is designed for single-tenant deployments or automated systems, not multi-user environments where different users need different access levels. To rotate your keys, update the environment variable and restart the Primeagent server.

To enable environment-based API key validation:

1. In the Primeagent `.env` file, set the API key source to `env`:

    ```text
    PRIMEAGFENT_API_KEY_SOURCE=env
    ```

2. In the Primeagent `.env` file, set the API key value:

    ```text
    PRIMEAGFENT_API_KEY=your-secure-api-key
    ```

3. Use the API key in your requests:

    ```shell
    curl -X POST \
      "http://PRIMEAGFENT_SERVER_ADDRESS/api/v1/run/FLOW_ID?stream=false" \
      -H "Content-Type: application/json" \
      -H "x-api-key: PRIMEAGFENT_API_KEY" \
      -d '{"inputs": {"text":""}, "tweaks": {}}'
    ```

    Replace `PRIMEAGFENT_SERVER_ADDRESS`, `FLOW_ID`, and `PRIMEAGFENT_API_KEY` with the values from your deployment.

<details>
<summary>Kubernetes deployment example</summary>

To configure an environment-based API key in a Kubernetes Secret, do the following:

1. Create a Kubernetes Secret with your API key:

    ```yaml
    apiVersion: v1
    kind: Secret
    metadata:
      name: primeagfent-api-key
    type: Opaque
    stringData:
      api-key: "YOUR_API_KEY"
    ```

    Replace `YOUR_API_KEY` with the `PRIMEAGFENT_API_KEY` value from the Primeagent `.env` file.

2. Reference the `primeagfent-api-key` Secret in your Kubernetes deployment:

    ```yaml
    apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: primeagfent
    spec:
      template:
        spec:
          containers:
          - name: primeagfent
            image: khulnasoft/primeagfent:latest
            env:
            - name: PRIMEAGFENT_API_KEY_SOURCE
              value: "env"
            - name: PRIMEAGFENT_API_KEY
              valueFrom:
                secretKeyRef:
                  name: primeagfent-api-key
                  key: api-key
    ```

</details>

<details>
<summary>Docker Compose example</summary>

To configure an environment-based API key in Docker Compose, do the following:

1. Set the API key in your Primeagent `.env` file.

    ```text
    PRIMEAGFENT_API_KEY=your-secure-api-key
    ```

    Replace `YOUR_API_KEY` with your actual Primeagent API key value.

2. Create or update your `docker-compose.yml` file to set `PRIMEAGFENT_API_KEY_SOURCE=env` and reference the `PRIMEAGFENT_API_KEY`.

    ```yaml
    services:
      primeagfent:
        image: khulnasoft/primeagfent:latest
        environment:
          - PRIMEAGFENT_API_KEY_SOURCE=env
          - PRIMEAGFENT_API_KEY=${PRIMEAGFENT_API_KEY}
        ports:
          - "7860:7860"
    ```

</details>

### PRIMEAGFENT_CORS_* {#cors-configuration-for-authentication}

Cross-Origin Resource Sharing (CORS) configuration controls how authentication credentials are handled when your Primeagent frontend and backend are served from different origins.
The following `PRIMEAGFENT_CORS_*` environment variables are available:

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_CORS_ALLOW_CREDENTIALS` | Boolean | `True` | Whether to allow credentials, such as cookies and authorization headers, in CORS requests. |
| `PRIMEAGFENT_CORS_ALLOW_HEADERS` | List[String] or String | `*` | The allowed headers for CORS requests. Provide a comma-separated list of headers or use `*` to allow all headers. |
| `PRIMEAGFENT_CORS_ALLOW_METHODS` | List[String] or String | `*` | The allowed HTTP methods for CORS requests. Provide a comma-separated list of methods or use `*` to allow all methods. |
| `PRIMEAGFENT_CORS_ORIGINS` | String | `*` | The allowed CORS origins. Provide a comma-separated list of origins or use `*` for all origins. |

The default configuration enables CORS credentials and uses wildcards (`*`) to allow all origins, headers, and methods:

```text
PRIMEAGFENT_CORS_ORIGINS=*
PRIMEAGFENT_CORS_ALLOW_CREDENTIALS=True
PRIMEAGFENT_CORS_ALLOW_HEADERS=*
PRIMEAGFENT_CORS_ALLOW_METHODS=*
```

:::danger
Primeagent's default CORS settings can be a security risk in production environments because any website can make requests to your Primeagent API, and any website can include credentials in cross-origin requests, including authentication cookies and authorization headers.

In production deployments, specify exact origins in `PRIMEAGFENT_CORS_ORIGINS`.
You can also specify allowed headers and methods, if needed.
For example:

```text
PRIMEAGFENT_CORS_ORIGINS=["https://yourdomain.com","https://app.yourdomain.com"]
PRIMEAGFENT_CORS_ALLOW_CREDENTIALS=True
PRIMEAGFENT_CORS_ALLOW_HEADERS=["Content-Type","Authorization"]
PRIMEAGFENT_CORS_ALLOW_METHODS=["GET","POST","PUT"]
```
:::

### SSRF protection {#ssrf-protection}

The following environment variables configure Server-Side Request Forgery (SSRF) protection for the [**API Request** component](/api-request).
SSRF protection prevents requests to internal or private network resources, such as private IP ranges, loopback addresses, and cloud metadata endpoints.

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_SSRF_PROTECTION_ENABLED` | Boolean | `False` | Enable SSRF protection for the **API Request** component. When enabled, the component blocks requests to private IP addresses. When disabled, requests are not blocked. |
| `PRIMEAGFENT_SSRF_ALLOWED_HOSTS` | List[String] | Not set | A comma-separated list of allowed hosts, IP addresses, or CIDR ranges that can bypass SSRF protection checks. For example: `192.168.1.0/24,10.0.0.5,*.internal.company.local`.|

### Login rate limiting {#login-rate-limiting}

The following environment variables configure IP-based rate limiting on the `/login` endpoint to protect against brute-force attacks.
When the limit is exceeded, Primeagent returns HTTP 429 with a `Retry-After: 60` header.

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_RATE_LIMIT_PER_MINUTE` | Integer | `5` | Maximum number of login attempts allowed per minute from a single IP address. |
| `PRIMEAGFENT_RATE_LIMIT_STORAGE_URI` | String | `memory://` | Storage backend for rate limit counters. Use `memory://` for single-server deployments or `redis://host:port` for multi-server deployments where the limit should be shared across instances. |
| `PRIMEAGFENT_RATE_LIMIT_TRUST_PROXY` | Boolean | `False` | When `true`, Primeagent reads the client IP from the rightmost `X-Forwarded-For` header entry instead of the direct connection IP. Enable only when Primeagent is behind a trusted reverse proxy or load balancer. Do not enable if users can reach Primeagent directly, as this allows header spoofing. |

### PRIMEAGFENT_WEBHOOK_AUTH_ENABLE {#primeagfent-webhook-auth-enable}

This variable controls whether API key authentication is required for webhook endpoints.

| Variable | Format | Default | Description |
|----------|--------|---------|-------------|
| `PRIMEAGFENT_WEBHOOK_AUTH_ENABLE` | Boolean | `True` | When `True`, webhook endpoints require API key authentication and validate that the authenticated user owns the flow being executed. When `False`, no Primeagent API key is required and all requests to the webhook endpoint are treated as being sent by the flow owner. |

By default, webhooks require API key authentication with `PRIMEAGFENT_WEBHOOK_AUTH_ENABLE=True`.

To allow webhooks to run without authentication (not recommended; use only in trusted environments), in your Primeagent `.env` file, set `PRIMEAGFENT_WEBHOOK_AUTH_ENABLE=False`.

When webhook authentication is enabled, you must provide a Primeagent API key with each webhook request as an HTTP header or query parameter. For more information, see [Require authentication for webhooks](/webhook#require-authentication-for-webhooks).

## Start a Primeagent server with authentication enabled

This section shows you how to use the [authentication environment variables](/api-keys-and-authentication#authentication-environment-variables) to deploy a Primeagent server with authentication enabled.
This involves disabling automatic login, setting superuser credentials, generating a secret encryption key, and enabling user management.

This configuration is recommended for any deployment where Primeagent is exposed to a shared or public network, or where multiple users access the same Primeagent server.

With authentication enabled, all users must sign in to the visual editor with valid credentials, and API requests require authentication with a Primeagent API key.
Additionally, you must sign in as a superuser to manage users and [create a Primeagent API key](#create-a-primeagfent-api-key) with superuser privileges.

### Start the Primeagent server

1. Create a `.env` file with the following variables:

    ```text
    PRIMEAGFENT_AUTO_LOGIN=False
    PRIMEAGFENT_SUPERUSER=
    PRIMEAGFENT_SUPERUSER_PASSWORD=
    PRIMEAGFENT_SECRET_KEY=
    PRIMEAGFENT_NEW_USER_IS_ACTIVE=False
    PRIMEAGFENT_ENABLE_SUPERUSER_CLI=False
    ```

    Your `.env` file can have other environment variables.
    This example focuses on authentication variables.

2. Set `PRIMEAGFENT_SUPERUSER` and `PRIMEAGFENT_SUPERUSER_PASSWORD` to your desired superuser credentials.

    For a one-time test, you can use basic credentials like `administrator` and `password`.
    Strong, securely-stored credentials are recommended in genuine development and production environments.

3. Recommended: Generate and set a `PRIMEAGFENT_SECRET_KEY` for encrypting sensitive data.

    If you don't set a secret key, Primeagent generates one automatically, but this isn't recommended for production environments.

    For instructions on generating and setting a secret key, see [`PRIMEAGFENT_SECRET_KEY`](#primeagfent-secret-key).

4. Save your `.env` file with the populated variables. For example:

    ```text
    PRIMEAGFENT_AUTO_LOGIN=False
    PRIMEAGFENT_SUPERUSER=administrator
    PRIMEAGFENT_SUPERUSER_PASSWORD=securepassword
    PRIMEAGFENT_SECRET_KEY=dBuu...2kM2_fb
    PRIMEAGFENT_NEW_USER_IS_ACTIVE=False
    PRIMEAGFENT_ENABLE_SUPERUSER_CLI=False
    ```

5. Start Primeagent with the configuration from your `.env` file:

    ```text
    uv run primeagfent run --env-file .env
    ```

    Starting Primeagent with a `.env` file automatically authenticates you as the superuser set in `PRIMEAGFENT_SUPERUSER` and `PRIMEAGFENT_SUPERUSER_PASSWORD`.
    If you don't explicitly set these variables, the default values are `primeagfent` and `primeagfent` for system auto-login.

6. Verify the server is running. The default location is `http://localhost:7860`.

Next, you can add users to your Primeagent server to collaborate with others on flows.

### Manage users as an administrator

1. To complete your first-time login as a superuser, go to `http://localhost:7860/login`.

    If you aren't using the default location, replace `localhost:7860` with your server's address.

2. Log in with the superuser credentials you set in your `.env` (`PRIMEAGFENT_SUPERUSER` and `PRIMEAGFENT_SUPERUSER_PASSWORD`).

3. To manage users on your server, navigate to `/admin`, such as `http://localhost:7860/admin`, click your profile icon, and then click **Admin Page**.

    As a superuser, you can add users, set permissions, reset passwords, and delete accounts.

4. To add a user, click **New User**, and then complete the user account form:

    1. Enter a username and password.
    2. To activate the account immediately, select **Active**. Inactive users cannot sign in or access flows they created before becoming inactive.
    3. Deselect **Superuser** if you don't want the user to have full administrative privileges.
    4. Click **Save**. The new user appears in the **Admin Page**.

5. Send the credentials to the user so they can sign in to Primeagent. The superuser sets the initial password when creating the account, so users must receive their login credentials from the superuser.

6. To test the new user's access, sign out of Primeagent, and then sign in with the new user's credentials.

    Try to access the `/admin` page.
    You are redirected to the `/flows` page if the new user isn't a superuser.

## See also

* [Primeagent environment variables](/environment-variables)
* [Primeagent Security Policy](https://github.com/khulnasoft/primeagfent/blob/main/SECURITY.md) — reporting vulnerabilities, security configuration, and [secret key rotation](https://github.com/khulnasoft/primeagfent/blob/main/SECURITY.md#secret-key-rotation)
